[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/GDSerCommDock/MenuLogic.gd" type="Script" id=1]
[ext_resource path="res://addons/GDSerCommDock/Com.gd" type="Script" id=2]
[ext_resource path="res://addons/GDSerCommDock/Stylebox.tres" type="StyleBox" id=3]

[node name="SerialCommunication" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Com" type="Node" parent="."]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SendVBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 52.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/SendVBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="SendHBoxContainer" type="HBoxContainer" parent="VBoxContainer/SendVBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0

[node name="SendButton" type="Button" parent="VBoxContainer/SendVBoxContainer/SendHBoxContainer"]
margin_right = 43.0
margin_bottom = 24.0
text = "Send"

[node name="EndlineCheckBox" type="CheckBox" parent="VBoxContainer/SendVBoxContainer/SendHBoxContainer"]
margin_left = 47.0
margin_right = 138.0
margin_bottom = 24.0
text = "w/endline"

[node name="PortHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 76.0

[node name="PortOptionButton" type="OptionButton" parent="VBoxContainer/PortHBoxContainer"]
margin_right = 55.0
margin_bottom = 20.0
text = "Port"
items = [ "Port", null, false, 0, null, "COM7", null, false, 1, null, "COM9", null, false, 2, null, "COM8", null, false, 3, null ]
selected = 0

[node name="BaudRateOptionButton" type="OptionButton" parent="VBoxContainer/PortHBoxContainer"]
margin_left = 59.0
margin_right = 145.0
margin_bottom = 20.0
text = "Baudrate"
items = [ "Baudrate", null, false, 0, null, "300", null, false, 1, null, "600", null, false, 2, null, "1200", null, false, 3, null, "2400", null, false, 4, null, "4800", null, false, 5, null, "9600", null, false, 6, null, "14400", null, false, 7, null, "19200", null, false, 8, null, "28800", null, false, 9, null, "38400", null, false, 10, null, "57600", null, false, 11, null, "115200", null, false, 12, null ]
selected = 0

[node name="RefreshButton" type="Button" parent="VBoxContainer/PortHBoxContainer"]
margin_left = 149.0
margin_right = 209.0
margin_bottom = 20.0
text = "Refresh"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 104.0

[node name="ClearButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 24.0
text = "Clear"

[node name="DisconnectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 132.0
margin_bottom = 24.0
text = "Disconnect"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 233.0
margin_bottom = 24.0
pressed = true
text = "Auto scroll"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 1024.0
margin_bottom = 112.0

[node name="SerialReadRichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 124.211
custom_styles/normal = ExtResource( 3 )
scroll_following = true

[connection signal="gui_input" from="VBoxContainer/SendVBoxContainer/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="pressed" from="VBoxContainer/SendVBoxContainer/SendHBoxContainer/SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/PortHBoxContainer/PortOptionButton" to="." method="_on_PortOptionButton_item_selected"]
[connection signal="item_selected" from="VBoxContainer/PortHBoxContainer/BaudRateOptionButton" to="." method="_on_BaudRateOptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/PortHBoxContainer/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
